--- a/css/traffic.css
+++ b/css/traffic.css
@@ -5,6 +5,11 @@ body {
     min-height: 100vh;      /* make <body> fill the plugin */
 }
 
+h3 {
+    margin: 0;
+    padding-right: 1.0em;
+}
+
 input {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: small;
@@ -17,12 +22,47 @@ input {
     padding: 1.0em;
 }
 
-#mapControls {
-
-    background-color: lightgray;
-    padding: 1.0em;
+#app {
+    height: 100vh;
+    overflow: hidden;
 }
 
+#mapControls {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+
+    top: 10px;
+    left: 10px;
+    width: 555px;
+    z-index: 1000;
+    background: rgba(222, 222, 222, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#otherControls {
+    display: flex;
+    flex-direction: column;
+}
+
+.controlRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#mapSVG {
+    width: 100%;
+    height: 100%;
+}
+
+#map-container {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
 
 #timePlace {
     font-size: 1.5em;
@@ -30,3 +70,4 @@ input {
     padding-right: 2.0em;
     user-select: none;
 }
+
